--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,12 @@
+language: node_js
+node_js:
+  - "node"
+
+before_install:
+  - "npm install elm@0.18.0"
+
+script: elm make --yes
+
 deploy:
   provider: pages
   skip_cleanup: true
