--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
 before_install:
   - "npm install elm@0.18.0"
 
-script: elm make --yes
+script: elm make --warn Main.elm
 
 deploy:
   provider: pages
